[package]
name = "codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = { path ="../net"}
flate2 = "1.0.25"
url = "2.3.1"
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0.38"
async-trait = "0.1.63"
native-tls = "0.2.11"