[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0.38"
tokio-native-tls = "0.3.0"
async-trait = "0.1.64"
chrono = "0.4.23"
async-channel = "1.8.0"
futures = "0.3.26"
